--- a/src/components/FeedbackOptions/FeedbackOptions.module.css
+++ b/src/components/FeedbackOptions/FeedbackOptions.module.css
@@ -1,17 +1,16 @@
 .options {
-    width: 200px;
-    display: flex;
-    justify-content: space-around;
-  }
-  
-  .button {
-    padding: 15px;
-    border: none;
-    border-radius: 15px;
-    cursor: pointer;
-  }
-  
-  button:hover,
-  button:focus {
-    background-color: turquoise;
-  }
+  width: 200px;
+  display: flex;
+  justify-content: space-around;
+}
+
+.button {
+  padding: 10px;
+  border: none;
+  border-radius: 5px;
+}
+
+button:hover,
+button:focus {
+  background-color: green;
+}
